# some-shits

./: .gitignore  README.md
church/: church.py  pyproject.toml  test.py
church/church.egg-info/: PKG-INFO  SOURCES.txt
mercari-parser/: main.py  pyproject.toml  tmp
notebook/: pyproject.toml  test.py
nptyping-test/: main.py  pyproject.toml
nptyping-test/.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  main.data.json  main.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
nptyping-test/.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
nptyping-test/.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
nptyping-test/.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
nptyping-test/nptyping_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nptyping-test/tests/: test_nptyping_test.py
primitive-go-cli/: Dockerfile
primitive-go-server/: Dockerfile  docker-compose.yml  main.go
react-tutorial-with-ts/: package-lock.json  package.json
react-tutorial-with-ts/src/: index.css  index.tsx
