[tool.poetry]
name = "nptyping-test"
version = "0.1.0"
description = ""
authors = ["takeshi0406 <sci.and.eng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
nptyping = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
